Fixed alignment issues in search

--- a/frontend/src/app/components/search/search.component.css
+++ b/frontend/src/app/components/search/search.component.css
@@ -166,7 +166,7 @@ li {
     min-width: max-content;
     justify-content: space-between;
     align-items: flex-start;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     gap: 1rem;
 }
 
@@ -179,6 +179,27 @@ li {
 .spell-text {
     flex: 0 1 auto;
     min-width: 0;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    min-width: 150px;
+    margin: 0.5rem;
+    align-items: left;
+}
+
+.card-meta {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
+  flex-wrap: wrap;
+  flex: 0 1 auto;
+  min-width: 0;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  min-width: 150px;
+  margin: 0.5rem;
 }
 
 .spell-name {
